# geometry

./: .emacs  .gitignore  Geometry.hs  Main.hs  TODO.org  config  description.txt  emacs-settings.el  geometry.cabal  ghcid.el  livescript-mode.el  livescript-modeb.el  stack.yaml
haskell/geometry/: Angle.hs  Base.hs  Circle.hs  Decorations.hs  Figures.hs  Geometry.hs  Intersections.hs  Line.hs  Main.hs  Point.hs  Polygon.hs  SVG.hs  Testing.hs  geometry.cabal
haskell/geometry/.stack-work/: stack.sqlite3
haskell/geometry/Geometry/: Angle.hs  Base.hs  Circle.hs  Decorations.hs  Figures.hs  Intersections.hs  Line.hs  Plot.hs  Point.hs  Polygon.hs  SVG.hs  Testing.hs
haskell/geometry/doc/: Angle.html  Base.html  Circle.html  Decorations.html  Figures.html  Geometry.html  Line.html  Point.html  Polygon.html  SVG.html  doc-index-126.html  doc-index-35.html  doc-index-45.html  doc-index-46.html  doc-index-60.html  doc-index-63.html  doc-index-64.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index.html  (+2 more)
haskell/geometry/misc/: Testing.hs
haskell/geometry/src/: .#Geometry.hs  .#Polygon.hs  Affine.hs  AffineSpec.hs  Angle.hs  Angular.hs  Base.hs  BaseSpec.hs  Circle.hs  CircleSpec.hs  Curve.hs  Decorations.hs  HList.hs  (+18 more)
(+144 files in other folders)
